--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ Dark gray: hsl(0, 0%, 59%)
 body{
     
     background-color: var(--dark_cyan);
+    /* background-color:red; */
     font-family: 'Kumbh Sans';
     height: 100vh;
     width: 100%;
@@ -45,14 +46,16 @@ body{
 }
 
 .top_img{
-    transform: translate(-52% , -45%);
+    left:0;
+    top:0;
+    transform: translate(-29%, -52%);
 }
 
 .bottom_img{
     bottom:0;
     right:0;
     z-index: -999;
-    transform: translate(22% , 58%);
+    transform: translate(23% , 65%);
 }
 
 
@@ -73,18 +76,21 @@ body{
     justify-content:flex-start;
     flex-direction: column;
     /* height: 368px; */
-    height:clamp(400px, calc(50vh - 100px), 480px);
+    height:clamp(376px, calc(50vh - 100px), 480px);
     /* width: 350px; */
-    width:clamp(320px, calc(50vw - 100px), 400px);
-    border-radius: 1.3rem;
+    width:clamp(320px, calc(50vw - 100px), 350px);
+    border-radius: 0.9rem;
     overflow: hidden;
     background-color: white;
     margin:0 2rem;
+    border: solid var(--dark_cyan) 1px;
+    box-shadow: 2px 50px 50px -14px rgba(0,0,0,0.24);
+    
 }
 
 .card__upper{
     background-image: url("./images/bg-pattern-card.svg");
-    height: 37.3%;
+    height: 7.79rem;
     width: 100%;
     position: relative;
 }
@@ -98,9 +104,17 @@ body{
 
 }
 
+.card__middle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
 .card__image img{
     position: static;
-    height: 104px;
+    height: 106px;
     border-radius: 50%;
     border: solid 5px white;
 }
@@ -108,58 +122,102 @@ body{
     display:flex;
     align-items: center;
     justify-content: center;
-    transform: translateY(-157%);
-    gap: 0.4rem;
-    font-size: 1.07rem;
-    margin-bottom: 0.06rem;
+    transform: translateY(-156%);
+    gap: 0.5rem;
+    font-size: 1rem;
+    
 }
 .name{
     font-weight: 700;
     color: var(--dark_blue);
-    letter-spacing: 0.05rem;
 }
 .age{
     color: var(--grayish_blue);
 }
+
 .card__city{
-    font-size: 0.85rem;
-    transform: translateY(-115%);
+    font-size: 0.8rem;
+    transform: translateY(-135%);
     color: var(--grayish_blue);
-    margin-bottom: 0.6rem;
 }
+
 hr{ 
+    
     width: 100%;
-    border: solid var(--dark_gray) 1px;
+    margin-top:0.1rem;
+    border: solid rgba(235, 235, 235, 0.562) 1px;
+    /* border: red 1px solid; */
 }
 
 .card__stats{
+    /* display: flex;
+    align-items:center;
+    justify-content:space-evenly;
+    flex-direction: row;
+    width: 100%;
+    /* padding: 0 3.1rem; */
+    /* border-top: red solid 1px; */
+     
+
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    /* border-top: red solid 1px; */
+    padding-top: 1.67rem;
+    
+}
+
+/* 
+.card__stats__names{
     display: flex;
     align-items: center;
     flex-direction: row;
     justify-content:space-evenly;
-    height: 23%;
+    height: 11.5%;
     width: 100%;
-    padding: 0 0.5rem;
-}
+    
+    
+} */
 
 .stat__item{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items:center;
+    flex-direction: column;
+    
+    
+    
+}
+.stat__item--followers{
+    /* align-items:flex-end; */
+    margin-right: -1.9rem;
+}
+
+
+.stat__item--photos{
+    /* align-items:flex-start; */
+    margin-left: -1.7rem;
 }
 
 .stat__number{
-    font-size: 1.1rem;
+    font-size: 18px;
     color: var(--dark_blue);
     font-weight: 700;
-    margin-top: 0.3rem;
+    margin-bottom: 0.5rem;
+    
+    /* margin-top: 1.6rem; */
+    
 }
 
 .stat__name{
-    font-weight: 700;
+    font-weight: 400;
     color: var(--grayish_blue);
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     letter-spacing: 0.1rem;
-    margin-top:0.4rem;
+    transform: translateY(-80%);
+    margin-top: 0.25rem;
+
+}
+
+.center__item{
+    margin: 0 3rem;
 }
